# survey_work

./: 010_3_rest_after_points.txt  010_4_classified_points.txt  010_5_non_classified_points.txt  010_6_final_vec_points.txt  092_rest_after_locals.txt  093_rest_after_points.txt  094_classified_points.txt  096_non_classified_points.txt  097_final_vec_points.txt  09_trees.txt  10_1_out_file_points_data.txt  10_2_rest_after_locals.txt  10_out_file_points_data.txt  11_trees.txt  201200120_PIM1_Distanzberechnungen.txt  20180420_WEHA_MUSE_Kont_Target_calc.txt  20180523_WEHA_PIM1_Muse_Messungen_doku.txt  201901029_WEHA_PIM1_Muse_Grund_STT_Testareal.txt  20190510_WEHA_PIM1_Muse_Kont_Target_Insert_2.txt  20190719_WEHA_PIM1_Muse_Kontrollen_Areal_calc2.txt  20190719_WEHA_PIM1_Muse_Kontrollen_Areal_calc4.txt  20200108_WEHA_PIM1_Muse_Kontrollen_Areal_PIM1.txt  20200116_WEHA_PIM1_Muse_Kontrollen_AussenAreal_Target_1_frameMUSE.txt  20200116_WEHA_PIM1_Muse_Kontrollen_AussenAreal_Target_frameMUSE.txt  20200218_WEHA_PIM1_Muse_Kontrollen_AussenAreal_Target.txt  20200218_WEHA_PIM1_Muse_Kontrollen_AussenAreal_Target_calc20200813_frameMUSE.txt  20200218_WEHA_PIM1_Muse_Kontrollen_AussenAreal_Target_frameMUSE.txt  20200317_PIM1_Position_Panel1-13_Berechnungen.txt  20220118_WEHA_PIM1_Muse_STT-and-BMbars_only.txt  20220810_WEHA_PIM1_Muse_Procedure.txt  20220830_WEHA_PIM1_Muse_Grundverm_transf.txt  20220831_WEHA_PIM1_Muse_Grundverm.txt  20220914_WEHA_PIM1_Muse_Grundverm_Sensor_VETO_annotated.txt  20230117_WEHA_PiM1_Muse_Gestell.txt  20230613_WEHA_PiM1_Muse_Kont_Targetpositionen.txt  README  (+36 more)
(+503 files in other folders)
